--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "ecommerce",
+    "name": "ecommerce-project",
     "version": "1.0.0",
     "description": "<img src=\"https://devmounta.in/img/logowhiteblue.png\" width=\"250\" align=\"right\">",
     "main": "index.js",
